tests/structurals/ill-typed/bad-unexpected-pattern-for-type.stella
language core;
extend with #structural-patterns, #unit-type, #lists;

fn main(input : Unit) -> Bool {
  return
    match input {
      [] => true
   }
}
